@@ -139,19 +139,23 @@ plot(zz, xlim = c(-1,1), ylim = c(-1,1), col = "red", asp = 1,
 abline(h = 0, v = 0, col = "blue", lty = 3)
 points(zz.shift, col = "orange")
 
-## as.complex(<some NA>) --> NA_complex_
-NAs <- vapply(list(NA, NA_integer_, NA_character_, NA_real_, NA_complex_),
+## as.complex(<some NA>): numbers keep Im = 0:
+stopifnot(identical(as.complex(NA_real_), NA_real_ + 0i)) # has always been true
+NAs <- vapply(list(NA, NA_integer_, NA_real_, NA_character_, NA_complex_),
               as.complex, 0+0i)
-stopifnot(identical(NA_complex_, unique(NAs)))
+stopifnot(is.na(NAs), is.na(Re(NAs))) # has always been true
+## in R-devel from {r84322, 2023-04-25}: stopifnot(identical(NA_complex_, unique(NAs)))
+Im(NAs) # [0 0 0 NA NA]  \\ in R <= 4.3.x was [NA NA 0 NA NA]  
+stopifnot(Im(NAs)[1:3] == 0)
 
-showC <- function(z) noquote(sprintf("(R = \%g, I = \%g)", Re(z), Im(z)))
+showC <- function(z) noquote(paste0("(", Re(z), ",", Im(z), ")"))
 
 ## The exact result of this *depends* on the platform, compiler, math-library:
 (NpNA <- NaN + NA_complex_) ; str(NpNA) # *behaves* as 'cplx NA' ..
 stopifnot(is.na(NpNA), is.na(NA_complex_), is.na(Re(NA_complex_)), is.na(Im(NA_complex_)))
-showC(NpNA)# but does not always show '(R = NaN, I = NA)'
+showC(NpNA)# but does not always show '(NaN,NA)'
 ## and this is not TRUE everywhere:
 identical(NpNA, NA_complex_)
-showC(NA_complex_) # always == (R = NA, I = NA)
+showC(NA_complex_) # always == (NA,NA)
 }
 \keyword{complex}
